I am not good typer

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ def flatten(matrix):
 <code>def len_or_none(obj):
    try:
          return len(obj)
-   except TyperError:
+   except TypeError:
      return None
 
 </code></pre>
