--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ TabError: inconsistent use of tabs and spaces in indentation
           </p>
           <p>
           <small>
-            Technical trainer
+            Python trainer, on-site &amp; remote
             <br>
             <a href="http://truthful.technology">http://truthful.technology</a>
           </small>
