Add pythonclock.org iframe

--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@ TabError: inconsistent use of tabs and spaces in indentation
         <section>
           <h1>PEP 373</h1>
           <h2>End Of Life for Python 2.7: <strong><blink>2020</blink></strong></h2>
+          <iframe src="http://pythonclock.org/" width="100%" height="190px"></iframe>
           <aside class="notes" data-markdown>
             But that shouldn't be a problem because you never really have to upgrade to Python 3.
 
